Added string decryption from key and IV.